--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Books</h1>
 
 
+
 <h1>New book</h1>
 
- <%= form_with url:"/show", local:true do |f| %>
+ <%= form_with model:@book, local:true do |f| %>
 
   <h4>title</h4>
   <%= f.text_field :title %>
