--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+
+
+ <p>title:<%= @book.title %></p>
+
+ <p>body:<%= @book.body %></p>
+
+
+<p class="link">edit</p>
+
+<p class="link">back</p>
